--- a/test/environment/docker-compose.yml
+++ b/test/environment/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.3'
 services:
+  app:
+    image: solar-logger
+    restart: unless-stopped
+    build:
+      context: ../../.
+      dockerfile: dockerfile
+    volumes:
+      - ../../config.yml:/app/config.yml:ro
+    depends_on:
+      - db
   db:
     image: influxdb:2.7
     restart: unless-stopped
