feat: `version` flag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
+        ldflags: -X main.version=${{ github.ref_name }}
         extra_files: LICENSE
         md5sum: true
         sha256sum: true
